# quad-locomotion

./: .gitignore  pyproject.toml  viewer.html
conda/: env.yml
env_backend/: __init__.py
env_backend/configs/: __init__.py  env_config.py
env_backend/simulator/: __init__.py  config.py  core.py  headless.py  renderer.py  vec_env.py
env_backend/streamer/: README.MD  __init__.py  client.py  server.py  streaming_sim.py
env_backend/terrain/: __init__.py  base.py  boxes.py  scene_builder.py
examples/: simulator_demo.py  terrain_demo.py  test_streaming.py
generated_scenes/: boxes_terrain.xml  demo_terrain.xml  stream_test_terrain.xml  test_robot.xml  training_terrain.xml  vec_terrain_0.xml  vec_terrain_1.xml  vec_terrain_2.xml  vec_terrain_3.xml
logs/teacher/: checkpoint_100.pt  config.json  final_checkpoint.pt
